# rtic-printy

./: .gitignore  Cargo.toml  Embed.toml
.cargo/: config.toml
src/: main.rs
