[package]
name = "printy"
version = "0.1.0"
edition = "2018"

[dependencies]
cortex-m = { version = "0.7.3", features = ["linker-plugin-lto"] }
cortex-m-rt = "0.6.14"
cortex-m-rtic = "0.6.0-alpha.5"
panic-halt = "0.2.0"
panic-semihosting = "*"
lpc55-hal = { version = "0.3.0", features = ["rt", "rtic-peripherals"]}
rtt-target = { version = "0.3.1", features = ["cortex-m"] }


# this lets you use `cargo fix`!
[[bin]]
name = "printy"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations